# stratarouter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  MIGRATION.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  oss_fix.sh  py2.py  pyproject.toml  pyvenv.cfg  sample.sh  test.py  test.sh  test2.sh  test3.sh  v1.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  accuracy_benchmark.py  latency_benchmark.py  throughput_benchmark.py
core/: Cargo.toml  README.md  build.rs
core/.cargo/: audit.toml
core/benches/: benchmark.rs  pyproject.toml  routing_benchmark.rs  similarity.rs
core/costs/: costs.rs
core/determinism/: mod.rs
core/intent/: mod.rs
core/policy/: mod.rs
core/routing/: alternatives.rs
core/src/: cache.rs  error.rs  ffi.rs  lib.rs  route.rs  router.rs  similarity.rs  types.rs
core/src/algorithms/: calibration.rs  hybrid_scoring.rs  mod.rs  simd_ops.rs  vector_ops.rs
core/src/index/: hnsw.rs  mod.rs
core/tests/: complete_integration_tests.rs  complete_unit_tests.rs  comprehensive_95_coverage.rs  error_coverage_tests.rs  final_edge_cases.rs  index_and_simd_coverage.rs  integration_comprehensive.rs  integration_test.rs  integration_tests.rs  lib_coverage_tests.rs  new_integration_tests.rs  new_unit_tests.rs  types_coverage_tests.rs  unit_tests.rs
docs/: api-reference.md  architecture.md  deployment.md  getting-started.md  integrations.md
examples/: advanced_routing.py  agent_router.py  batch_processing.py  chatbot_router.py  fastapi_example.py  install.sh  langchain_rag_demo.py  my_first_router.py  my_first_router.sh  quickstart.py  rag_router.py  setup_dev.sh  test_all.sh  tool_router.py
integrations/: autogen_example.py  crewai_example.py  langchain_example.py  langgraph_example.py
integrations/benchmarks/: performance_comparison.py
python/: LICENSE  backup_setup.py  pyproject.toml  setup.py
python/stratarouter/: __init__.py  __version__.py  core.py  layer.py  py.typed  route.py  router.py  types.py
python/stratarouter/cloud/: __init__.py  client.py
python/stratarouter/encoders/: __init__.py  base.py  cohere.py  huggingface.py  openai.py
python/stratarouter/integrations/: __init__.py  autogen.py  crewai.py  generic.py  google_agent.py  langchain.py  langchain_new.py  langgraph.py  openai_assistants.py
python/stratarouter/utils/: __init__.py  helpers.py
python/tests/: __init__.py  test_core.py  test_route.py  test_router.py
scripts/: build.sh  build2.sh  build_release.sh  commit_ci_fixes.sh  commit_oss_fixes.sh  commit_repo_hygiene.sh  install_dev.sh  publish.sh  test_all.sh  verify_symbols.sh
server/: __init__.py  config.py  main.py  models.py
tests/: __init__.py  conftest.py  test_cloud.py  test_encoders  test_encoders.py  test_integrations.py  test_router.py  test_types.py  test_utils.py
