[package]
name = "stratarouter-core"
version = "0.2.0"
edition = "2021"
authors = ["InteleionAI <hello@inteleion.ai>"]
license = "MIT"
description = "High-performance semantic routing engine"
repository = "https://github.com/InteleionAI/stratarouter"
readme = "README.md"
keywords = ["routing", "nlp", "ai", "semantic"]
categories = ["algorithms", "science"]
publish = false
rust-version = "1.70"

[lib]
name = "stratarouter_core"
crate-type = ["cdylib", "rlib"]

# -----------------------
# Dependencies
# -----------------------

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Python bindings (optional for maturin)
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
numpy = { version = "0.20", optional = true }

# Math & algorithms
ndarray = "0.15"
nalgebra = "0.32"
wide = "0.7"

# Collections & hashing
ahash = "0.8"
rustc-hash = "1.1"

# Concurrency
rayon = "1.8"
parking_lot = "0.12"

# Serialization
bincode = "1.3"

# Text processing
regex = "1.10"
once_cell = "1.19"

# -----------------------
# Dev / Bench
# -----------------------

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
tempfile = "3.8"

# -----------------------
# Features
# -----------------------

[features]
default = []  # Don't enable Python by default for tests
python = ["pyo3", "numpy"]
production = []

# -----------------------
# Build Profiles
# -----------------------

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
debug = false
rpath = false
incremental = false

[profile.bench]
inherits = "release"

[[bench]]
name = "routing_benchmark"
harness = false

# -----------------------
# Maturin Configuration
# -----------------------

[package.metadata.maturin]
strip = true
module-name = "stratarouter_core"

