[package]
name = "stratarouter-core"
version = "0.2.4"
edition = "2021"
authors = ["StrataRouter Contributors <support@stratarouter.com>"]
license = "MIT"
description = "High-performance semantic routing engine — Rust core for StrataRouter"
repository = "https://github.com/ai-deeptech/stratarouter"
homepage = "https://stratarouter.com"
documentation = "https://docs.stratarouter.com"
readme = "README.md"
keywords = ["routing", "nlp", "ai", "semantic", "embeddings"]
categories = ["algorithms", "science"]
rust-version = "1.70"
# Set to true once the API is stable and you are ready to publish to crates.io
publish = false

[lib]
name = "stratarouter_core"
crate-type = ["cdylib", "rlib"]

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "1.0"
anyhow       = "1.0"

# Python bindings (only compiled with --features python / maturin)
pyo3   = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
numpy  = { version = "0.20", optional = true }

# Collections & hashing
ahash      = "0.8"
rustc-hash = "1.1"
lru        = "0.12"

# Concurrency
rayon       = "1.8"
parking_lot = "0.12"

# Serialization
bincode = "1.3"

# Text processing
regex     = "1.10"
once_cell = "1.19"

# ── Dev / Bench ───────────────────────────────────────────────────────────────

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1.4"
approx    = "0.5"
tempfile  = "3.8"

# ── Features ──────────────────────────────────────────────────────────────────

[features]
default    = []                    # No Python by default (keeps pure-Rust tests fast)
python     = ["pyo3", "numpy"]
production = []

# ── Build profiles ────────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
debug         = false
rpath         = false
incremental   = false
# overflow-checks intentionally left at default (true) for safety.

[profile.bench]
inherits = "release"

[[bench]]
name    = "routing_benchmark"
harness = false

[[bench]]
name    = "benchmark"
harness = false

[[bench]]
name    = "similarity"
harness = false

# ── Maturin ───────────────────────────────────────────────────────────────────

[package.metadata.maturin]
strip       = true
module-name = "stratarouter._core"
